Agregue una nueva imagen

--- a/Clase-Css/index.html
+++ b/Clase-Css/index.html
@@ -39,6 +39,11 @@
           src="https://dummyimage.com/800x300/d9d9d9/fff"
           alt="Imagen de prueba"
         />
+        <img
+          class="imagen"
+          src="https://dummyimage.com/800x300/d9d9d9/fff"
+          alt="Imagen de prueba"
+        />
         <p class="green">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio neque
           sit eveniet. Recusandae enim quas quisquam omnis, aperiam maxime
