quitamos un parrafo

--- a/Clase-Css/index.html
+++ b/Clase-Css/index.html
@@ -30,14 +30,7 @@
         <p class="green">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio neque
           sit eveniet. Recusandae enim quas quisquam omnis, aperiam maxime
-          explicabo quam. Voluptatem debitis unde tenetur recusandae autem
-          saepe, quis architecto?
-        </p>
-        <p class="green">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio neque
-          sit eveniet. Recusandae enim quas quisquam omnis, aperiam maxime
-          explicabo quam. Voluptatem debitis unde tenetur recusandae autem
-          saepe, quis architecto?
+          quis architecto?
         </p>
         <!-- Etiqueta para mostrar una imagen en mi sitio -->
         <img
