--- a/Clase-Flex/index.html
+++ b/Clase-Flex/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <main class="father">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
+      <div class="box one">1</div>
+      <div class="box two">2</div>
+      <div class="box three">3</div>
+      <div class="box four">4</div>
     </main>
   </body>
 </html>
