Agregamos animacion y posicion absoulta a la caja 3

--- a/Clase-Grid/index.html
+++ b/Clase-Grid/index.html
@@ -15,5 +15,17 @@
     <div class="box three">3</div>
     <div class="box four">4</div>
   </main>
+  <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
+    <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati laudantium totam molestias impedit nesciunt dolor, aut aliquam ipsa voluptatem nam numquam hic sed quae eaque qui natus vero voluptatibus perspiciatis.</article>
 </body>
 </html>
