--- a/Clase-Flex/index.html
+++ b/Clase-Flex/index.html
@@ -13,5 +13,8 @@
       <div class="box three">3</div>
       <div class="box four">4</div>
     </main>
+    <div class="image-container">
+      <img src="./image.png" alt="" class="miImagen">
+    </div>
   </body>
 </html>
