--- a/juego/index.html
+++ b/juego/index.html
@@ -24,38 +24,38 @@
           Escribe tu nombre
         </label>
         <input class="start-input" id="nombre" type="text" />
-        <button class="start-btn">Jugar</button>
+        <button class="btn">Jugar</button>
       </article>
 
       <!-- Seccion de juego -->
 
-      <article>
+      <article class="game">
 
         <!-- TIP shorcut de comentarios Windows: shift + alt + a // Mac(teclado español españa): command + shift + / -- Mac teclado latino: command + k + c -->
         
         <!-- Usuario -->
-        <section>
-          <h2>Pepito perez</h2> 
+        <section class="game-user">
+          <h2 class="game-user-name">Pepito perez</h2> 
           <!-- <img src="./images/stone.png" alt="Piedra">
           <img src="./images/toilet-paper.png" alt="Papel">
           <img src="./images/scissors.png" alt="Tijeras"> -->
-          <label for="seleccionar-arma">Selecciona tu arma</label>
-          <select name="" id="seleccionar-arma">
+          <label class="game-user-label" for="seleccionar-arma">Selecciona tu arma</label>
+          <select class="game-user-select" name="" id="seleccionar-arma">
             <option value="Piedra">Piedra</option>
             <option value="Papel">Papel</option>
             <option value="Tijeras">Tijeras</option>
           </select>
         </section>
 
-        <h2>VS</h2>
+        <h2 class="game-versus">VS</h2>
 
         <!-- Computadora -->
-        <section>
-          <h2>Computadora</h2>
-          <h3>¿?</h3>
+        <section class="game-computer">
+          <h2 class="game-computer-name">Computadora</h2>
+          <h3 class="game-computer-weapon">¿?</h3>
         </section>
 
-       <button>Jugar</button>
+       <button class="btn">Jugar</button>
       </article>
 
     </main>
