--- a/Clase-JS-Funciones/index.html
+++ b/Clase-JS-Funciones/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>Javascript | Funciones</h1>
+  <label for="centigrados">Escribe tus grados centigrados</label>
+  <input id="centigrados" type="number">
+  <button>Convertir</button>
   <script src="./index.js"></script>
 </body>
 </html>
