Explicacion de como se integra con el HTML

--- a/Clase-JS-Funciones/index.html
+++ b/Clase-JS-Funciones/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
   <h1>Javascript | Funciones</h1>
+
   <label for="centigrados">Escribe tus grados centigrados</label>
-  <input id="centigrados" type="number">
-  <button>Convertir</button>
+  <input id="centigrados" type="number" value="0">
+
+
+  <button id="btn">Convertir</button>
   <script src="./index.js"></script>
 </body>
 </html>
