--- a/Clase-JS-Objetos-HTML/index.html
+++ b/Clase-JS-Objetos-HTML/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <h1 id="titulo" class="titulo">Objetos</h1>
-
   <button id="boton">Cambiar titulo</button>
+
+  <input id="input_color" type="color">
+  <button id="boton_color">Cambiar color</button>
 
   <script src="./index.js"></script>
 </body>
