Juan Marco carousel agregado

--- a/Asesorias/Alison/index.html
+++ b/Asesorias/Alison/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./estilos/index.css">
+    <link rel="stylesheet" href="./estilos/index.css" />
     <title>Alison</title>
   </head>
   <body>
-    <h1 id="titulo" class="titulo">Alison</h1>
+    <header>
+      <h1 id="titulo" class="titulo">Alison</h1>
 
-    <h2 id="titulo_2" class="titulo otra_clase clase">Otro titulo</h2>
-    <label for="">Ingresa tu presupuesto</label> <br />
-    $ <input type="number" name="" id="valor" step="0.1"/>
+      <h2 id="titulo_2" class="titulo otra_clase clase">Otro titulo</h2>
+      <label for="">Ingresa tu presupuesto</label> <br />
+      $ <input type="number" name="" id="valor" step="0.1" />
 
-    <button id="btn">Buscar</button>
+      <button id="btn">Buscar</button>
+    </header>
 
     <section id="images-container" class="images-container">
       <div class="image">
