--- a/Asesorias/Juan-Marco/index.html
+++ b/Asesorias/Juan-Marco/index.html
@@ -9,32 +9,65 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>Juan Marco</title>
   </head>
   <body>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade carousel-parent" data-ride="carousel">
-      <img class="logo" src="https://loremflickr.com/100/100" alt="">
+    <div
+      id="carouselExampleFade"
+      class="carousel slide carousel-fade carousel-parent"
+      data-ride="carousel"
+    >
+      <img class="logo" src="https://loremflickr.com/100/100" alt="" />
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://loremflickr.com/1200/500" class="d-block w-100" alt="...">
+          <img
+            src="https://loremflickr.com/1200/500"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="https://loremflickr.com/1250/500" class="d-block w-100" alt="...">
+          <img
+            src="https://loremflickr.com/1250/500"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="https://loremflickr.com/1300/500" class="d-block w-100" alt="...">
+          <img
+            src="https://loremflickr.com/1300/500"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleFade"
+        role="button"
+        data-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleFade"
+        role="button"
+        data-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
     </div>
+
+    <dl class="row">
+      <dt class="col-sm-6 text-center" id="textoppal">
+        En tu casa necesitas cosas para
+      </dt>
+      <dd class="col-sm-6 text-left" id="textosecun">Ordenar</dd>
+    </dl>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -51,5 +84,7 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+
+    <script src="./index.js"></script>
   </body>
 </html>
