--- a/Asesorias/Juan-Marco/index.html
+++ b/Asesorias/Juan-Marco/index.html
@@ -69,6 +69,8 @@
       <dd class="col-sm-6 text-left" id="textosecun">Ordenar</dd>
     </dl>
 
+    <div class="bg-img"></div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
