Asesoria Alison modificada

--- a/Asesorias/Alison/index.html
+++ b/Asesorias/Alison/index.html
@@ -7,17 +7,93 @@
     <title>Alison</title>
   </head>
   <body>
-    <header>
+    <header class="encabezado">
       <h1 id="titulo" class="titulo">Alison</h1>
-
-      <h2 id="titulo_2" class="titulo otra_clase clase">Otro titulo</h2>
-      <label for="">Ingresa tu presupuesto</label> <br />
-      $ <input type="number" name="" id="valor" step="0.1" />
+      <label for="valor" class="label">Ingresa tu presupuesto</label> <br />
+      $ <input type="number" class="input" name="" id="valor" step="0.1" />
 
       <button id="btn">Buscar</button>
     </header>
 
     <section id="images-container" class="images-container">
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio01">10.000</span></h3>
+      </div>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio02">10.000</span></h3>
+      </div>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio03">20.000</span></h3>
+      </div>
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio01">10.000</span></h3>
+      </div>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio02">10.000</span></h3>
+      </div>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio03">20.000</span></h3>
+      </div>
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio01">10.000</span></h3>
+      </div>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio02">10.000</span></h3>
+      </div>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
+          alt=""
+        />
+        <h2>Camiseta blanca</h2>
+        <h3>Precio: $<span class="precio" id="precio03">20.000</span></h3>
+      </div>
       <div class="image">
         <img
           src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"
