Asesoria de Lina Gonzalez actualizada

--- a/Asesorias/Lina-Gonzalez/imagenes-con-recuadro/index.html
+++ b/Asesorias/Lina-Gonzalez/imagenes-con-recuadro/index.html
@@ -7,6 +7,13 @@
   <title>Imagenes con recuadro</title>
 </head>
 <body>
+  <section class="section-one">
+    <div class="text">
+      <h3>Titulo de prueba</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non eum amet explicabo quasi veniam ut, modi voluptate minus omnis in doloribus debitis! Quam nisi sapiente autem inventore. Explicabo, quaerat a?</p>
+      <button>Click here</button>
+    </div>
+  </section>
   <section class="container">
     <div class="bg-color"></div>
     <div class="image-container">
